Sonar: Resterende issues fra initiell commit